# model/topic.model.js
@@ -1,44 +1,46 @@
-const { default: mongoose } = require("mongoose");
+const {default: mongoose} = require("mongoose");
 
 const topicSchema = mongoose.Schema(
-  {
-    price: Number,
-    percentage: {
-      type: Number,
+    {
+        price: Number,
+        percentage: {
+            type: Number,
+            min:1,
+            max: 100,
+        },
+        during_month: {
+            type: String,
+        },
+        start_date: {
+            type: String,
+        },
+        time_of_day: String,
+        week_days: {
+            type: Array,
+            enums: ["Dush", "Sesh", "Chor", "Pay", "Juma", "Shan", "Yak"],
+        },
+        teacher_id: {
+            type: mongoose.Schema.Types.ObjectId,
+            ref: "teachers",
+        },
+        sections: {
+            type: [mongoose.Schema.Types.ObjectId],
+            ref: "sections",
+            default: [],
+        },
+        pupils: {
+            type: [mongoose.Schema.Types.ObjectId],
+            ref: "pupils",
+            default: [],
+        },
+        is_deleted: {
+            type: Boolean,
+            default: false,
+        },
     },
-    during_month: {
-      type: String,
-    },
-    start_date: {
-      type: String,
-    },
-    time_of_day: String,
-    week_days: {
-      type: Array,
-      enums: ["Dush", "Sesh", "Chor", "Pay", "Juma", "Shan", "Yak"],
-    },
-    teacher_id: {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: "teachers",
-    },
-    sections: {
-      type: [mongoose.Schema.Types.ObjectId],
-      ref: "sections",
-      default: [],
-    },
-    pupils: {
-      type: [mongoose.Schema.Types.ObjectId],
-      ref: "pupils",
-      default: [],
-    },
-    is_deleted: {
-      type: Boolean,
-      default: false,
-    },
-  },
-  {
-    timestamps: true,
-  }
+    {
+        timestamps: true,
+    }
 );
 
 const topicModel = mongoose.model("topics", topicSchema);
