# routes/pupils.routes.js
@@ -2,7 +2,7 @@ const {
   CreatePupilsController,
   UpdatePupilsController,
   GetPupilsListPupilsController,
-  DeletePupilsController,
+  DeletePupilsController, GetPupilsByTopicId,
 } = require("../controller/pupils.controller");
 
 const PupilsRouter = require("express").Router();
@@ -11,5 +11,6 @@ PupilsRouter.post("/create", CreatePupilsController);
 PupilsRouter.patch("/update/:id", UpdatePupilsController);
 PupilsRouter.delete("/delete/:id", DeletePupilsController);
 PupilsRouter.get("/get-list", GetPupilsListPupilsController);
+PupilsRouter.get("/get-by-topic/:topicId", GetPupilsByTopicId);
 
 module.exports = PupilsRouter;
